# meican_cli

./: .gitignore  Cargo.toml  README.md  SKILL.md  install.sh
.github/workflows/: release.yml
src/: api.rs  auth.rs  config.rs  display.rs  error.rs  main.rs  models.rs  types.rs
src/commands/: history.rs  menu.rs  mod.rs  order.rs  update.rs
