[package]
name = "meican_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "meican"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7"
colored = "2"
rpassword = "7"
thiserror = "2"
regex = "1"
urlencoding = "2"
self_update = "0.44"
